--- a/it.seda.security/pom.xml
+++ b/it.seda.security/pom.xml
@@ -8,9 +8,9 @@
   
 	<properties>
 		<java-version>1.6</java-version>
-		<org.springframework-version>3.2.6.RELEASE</org.springframework-version>
-		<org.springframework.security-version>3.2.0.RELEASE</org.springframework.security-version>
-		<org.aspectj-version>1.6.10</org.aspectj-version>
+		<org.springframework-version>4.1.1.RELEASE</org.springframework-version>
+		<org.springframework.security-version>3.2.5.RELEASE</org.springframework.security-version>
+		<org.aspectj-version>1.6.2</org.aspectj-version>
 		<org.slf4j-version>1.6.1</org.slf4j-version>
 	</properties>  
 
@@ -114,9 +114,21 @@
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
-			<!-- <version>1.8.1</version> -->
-			<version>1.9.12</version>
+			<version>1.9.2</version>
 		</dependency>
+		
+		<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>2.4.3</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.4.3</version>
+	    </dependency>
+		
 
 		<!-- Joda Time Library -->
 		<dependency>
